client/styles/partials/_search-page.scss
.search-page {
  height: 100%;
  width: 100%;

  @include display(flex);
  @include flex-direction(column);

  .navigation {
    @include flex(none);
  }

  &__content {
    @include flex(1 0 auto);
    @include display(flex);
    @include flex-direction(row);

    @include respond-to(handhelds) {
      flex-direction: column-reverse;
    }

    &--is-loading {
      opacity: 0.2;
    }
  }

  &__content {
    &__map, &__result {
      @include flex(1 0 auto);
      @include respond-to(handhelds) {
        width: 100%!important;
      }
    }

    &__result {
      position: relative;
      width: 60%;
      @include respond-to(handhelds) {
        @include flex(3);
      }

      .activity-list {
        overflow: scroll;
        -webkit-overflow-scrolling: touch;
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
      }
    }

    &__map {
      position: relative;
      width: 40%;
      @include align-items(stretch);
      @include display(flex);

      @include respond-to(handhelds) {
        @include flex(1);
      }

      .map-container {
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
      }
    }
  }
}

